[#95] chore: 캐릭터 목록 조회 API 스펙 수정